# Fast-Win-Setting-For-VibeCode

./: .editorconfig  .gitignore  .npmrc  .prettierignore  FOR_STUDENTS.md  README.md  eslint.config.js  package.json  pyproject.toml
docs/: CHEATSHEET.md  QUICKSTART.md  README.md  START_HERE.md
scripts/: check-setup.ps1  complete-setup.ps1  create-github-repo.ps1  final-install.ps1  finish-setup.ps1  github-auth.ps1  init-project.ps1  init-shared.ps1  install-all-extras.ps1  install-api-tools.ps1  install-databases.ps1  install-docker.ps1  install-frontend-tools.ps1  install-gh.ps1  install-linters.ps1  install-monitoring-tools.ps1  install-node-utils.ps1  install-python-extras.ps1  install-python.ps1  install-terminal-tools.ps1  setup-dev-env.ps1  setup-simple.ps1  verify-install.ps1
